--- a/index.html
+++ b/index.html
@@ -24,26 +24,158 @@
     </header>
     <main>
         <section>
+            <span>A hair salon for men in Kyiv</span>
             <h1>BarberShop</h1>
             <p>We are experts in trendy men’s haircuts. We work quickly, carefully and with style.</p>
         </section>
 
         <section>
             <ul>
-                <li></li>
-                <li></li>
+                <li>
+                    <img src="./images/foto_about_1.jpg" width="270" height="445" alt="Foto about us">
+                </li>
+                <li>
+                    <img src="./images/foto_about_2.jpg" width="270" height="445" alt="Foto about us">
+                </li>
             </ul>
             <div>
                 <p>About</p>
                 <h2>Best Barbershop in your city</h2>
+                <p>If you want to add more confidence to your image, you should definitely visit us.</p>
+                <p>We are a team that never stops at what has been achieved and are thirsty for changes. And when you fall into the hands of our master, you will never be the same again. We are a team that is always "on the same wave" with clients. Therefore, we are always ready to improve everyone who comes to us!</p>
+                <button type="button">ONLINE-BOOKING</button>
             </div>
+        </section>
+        <section>
+            <span>
+                Spend your time with the best masters
+            </span>
+            <h2>
+                Services and prices
+            </h2>
+            <ul>
+                <li>
+                    <p>Men’s haircut <span>from 300 uah.</span></p>
+                </li>
+                <li>
+                    <p>Beard trim <span>from 300 uah.</span></p>
+                </li>
+                <li>
+                    <p>Mustache trim <span>from 200 uah.</span></p>
+                </li>
+                <li>
+                    <p>Straight razor shave <span>from 200 uah.</span></p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <p>Trainee’s haircut <span>from 50 uah.</span></p>
+                </li>
+                <li>
+                    <p>Haircut under the nozzle <span>from 200 uah.</span></p>
+                </li>
+                <li>
+                    <p>Children’s haircut (0-12 y.o.) <span>from 300 uah.</span></p>
+                </li>
+                <li>
+                    <p>Camouflage of gray hair <span>from 200 uah.</span></p>
+                </li>
+            </ul>
+            <button type="button">online-booking</button>
+
+        </section>
+        <section>
+           <ul>
+            <li>
+                <span>600</span> <sup style="color: red;">+</sup>
+                <p>Satisfied customers per day</p>
+            </li>
+            <li>
+                <span>50</span> <sup style="color: red;">+</sup>
+                <p>Awards for excellent service</p>
+            </li>
+            <li>
+                <span>20</span> <sup style="color: red;">+</sup>
+                <p>Kyiv’s best barbers</p>
+            </li>
+            <li>
+                <span>100</span> <sup style="color: red;">+</sup>
+                <p>Gifts for regular customers</p>
+            </li>
+
+           </ul> 
+           <span>Old traditional school</span>
+           <h2>¿Why people come to us?</h2>
+           <p>Only good things are said about us. But it's better to see and feel 1 time than read 10 times. </p>
+        </section>
+        <section>
+            <span>For true enjoyers of the atmosphere</span>
+            <h2>Our barbers</h2>
+            <ul>
+                <li>
+                    <img src="./images/john-smith.jpg" width="370" height="346" alt="John Smith">
+                    <h3>John Smith</h3>
+                    <p>Extreme Barber</p>
+                    <ul>
+                        <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
+                        <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
+                        <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
+                        <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <img src="./images/michele-doe.jpg " width="370" height="346" alt="Michele Doe">
+                    <h3>Michele Doe</h3>
+                    <p>Extreme Barber</p>
+                    <ul>
+                        <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
+                        <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
+                        <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
+                        <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <img src="./images/alan-black.jpg" width="370" height="346" alt="Alan Black">
+                    <h3>Alan Black</h3>
+                    <p>Extreme Barber</p>
+                    <ul>
+                        <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
+                        <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
+                        <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
+                        <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
+                    </ul>
+                </li>
+            </ul>
+
+        </section>
+        <section>
+            <span></span>
+            <h2 hidden>Portfolio</h2>
+            <span>In Latin, "barba" means "beard"</span>
+            <ul>
+                <li><img src="./images/portfolio_1.jpg" width="270" height="360" alt="Portfolio"></li>
+                <li><img src="./images/portfolio_2.jpg" width="270" height="360" alt="Portfolio"></li>
+                <li><img src="./images/portfolio_3.jpg" width="270" height="360" alt="Portfolio"></li>
+                <li><img src="./images/portfolio_4.jpg" width="270" height="360" alt="Portfolio"></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Contacts</h2>
+            <address>
+                <ul>
+                    <li><a href="https://goo.gl/maps/kJ9vZ2LGP6WYrwJo7" target="_blank" rel="noopener noreferrer">st. Vasilkovaya, 7A <br>
+                        Kiev, 08132</a></li>
+                    <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
+                    <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+                </ul>
+            </address>
+            <span>Working hours</span>
+            <p>Every day from 9:00 to 22:00</p>
+            
         </section>
     </main>
     <footer>
-        <p>
-            <img src="./images/Group.svg" alt="Copyright" />
-            Copyright 2020
-        </p>
+        <p>&#169; Copyright 2020</p>
         <ul>
             <li>
                 <a href="http://" target="_blank" rel="noopener noreferrer">Instagram</a>
