--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     <a href="#" class="logo">
-    <img src="./images/Logo.svg" alt="logo" />
+    <img src="./images/Logo.svg" alt="logo">
     </a>
     <nav>
        <ul>
@@ -178,10 +178,10 @@
         <p>&#169; Copyright 2020</p>
         <ul>
             <li>
-                <a href="http://" target="_blank" rel="noopener noreferrer">Instagram</a>
+                <a href="" target="_blank" rel="noopener noreferrer">Instagram</a>
             </li>
             <li>
-                <a href="http://" target="_blank" rel="noopener noreferrer">Youtube</a>
+                <a href="" target="_blank" rel="noopener noreferrer">Youtube</a>
             </li>
         </ul> 
     </footer>
