--- a/index.html
+++ b/index.html
@@ -5,65 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FS73</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
     <a href="#" class="logo">
     <img src="./images/Logo.svg" alt="logo">
     </a>
     <nav>
-       <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services and prices</a></li>
-        <li><a href="#">Barbers</a></li>
-        <li><a href="#">Contacts</a></li>
+       <ul class="header-nav">
+        <li><a class="header-nav-link" href="#about">About</a></li>
+        <li><a class="header-nav-link"href="#prices">Services and prices</a></li>
+        <li><a class="header-nav-link"href="#barbers">Barbers</a></li>
+        <li><a class="header-nav-link"href="#">Contacts</a></li>
        </ul> 
     </nav>
-    <a href="tel:+380441111111">+38 044 111 11 11</a>
-    <button type="button">Online-booking</button>
+    <a class="header-contact" href="tel:+380441111111">+38 044 111 11 11</a>
+    <button class="header-button" type="button">Online-booking</button>
     </header>
     <main>
-        <section>
-            <span>A hair salon for men in Kyiv</span>
-            <h1>BarberShop</h1>
-            <p>We are experts in trendy men’s haircuts. We work quickly, carefully and with style.</p>
+        <section class="hero">
+            <span class="uptitle">A hair salon for men in Kyiv</span>
+            <h1 class="hero-title">BarberShop</h1>
+            <p class="hero-subtitle">We are experts in trendy men’s haircuts. We work quickly, carefully and with style.</p>
         </section>
 
-        <section>
-            <ul>
-                <li>
+        <section class="about" id="about">
+            <ul class="about-list">
+                <li class="about-item">
                     <img src="./images/foto_about_1.jpg" width="270" height="445" alt="Foto about us">
                 </li>
-                <li>
+                <li class="about-item">
                     <img src="./images/foto_about_2.jpg" width="270" height="445" alt="Foto about us">
                 </li>
             </ul>
             <div>
-                <p>About</p>
-                <h2>Best Barbershop in your city</h2>
-                <p>If you want to add more confidence to your image, you should definitely visit us.</p>
-                <p>We are a team that never stops at what has been achieved and are thirsty for changes. And when you fall into the hands of our master, you will never be the same again. We are a team that is always "on the same wave" with clients. Therefore, we are always ready to improve everyone who comes to us!</p>
-                <button type="button">ONLINE-BOOKING</button>
+                <span class="about-uptitle">About</span>
+                <h2 class="section-title about-title">Best Barbershop in your city</h2>
+                <p class="about subtitle">If you want to add more confidence to your image, you should definitely visit us.</p>
+                <p class="about-text">We are a team that never stops at what has been achieved and are thirsty for changes. And when you fall into the hands of our master, you will never be the same again. We are a team that is always "on the same wave" with clients. Therefore, we are always ready to improve everyone who comes to us!</p>
+                <button type="button" class="about-btn">ONLINE-BOOKING</button>
             </div>
         </section>
-        <section>
-            <span>
+        <section class="prices" id="prices">
+            <span class="prices-uptitle">
                 Spend your time with the best masters
             </span>
-            <h2>
+            <h2 class="prices-title section-title">
                 Services and prices
             </h2>
-            <ul>
-                <li>
-                    <p>Men’s haircut <span>from 300 uah.</span></p>
+            <ul class="prices-list">
+                <li class="prices-item">
+                    <p class="prices-item-text">Men’s haircut <span>from 300 uah.</span></p>
                 </li>
-                <li>
+                <li class="prices-item">
                     <p>Beard trim <span>from 300 uah.</span></p>
                 </li>
-                <li>
+                <li class="prices-item">
                     <p>Mustache trim <span>from 200 uah.</span></p>
                 </li>
-                <li>
+                <li class="prices-item">
                     <p>Straight razor shave <span>from 200 uah.</span></p>
                 </li>
             </ul>
@@ -81,14 +85,14 @@
                     <p>Camouflage of gray hair <span>from 200 uah.</span></p>
                 </li>
             </ul>
-            <button type="button">online-booking</button>
+            <button type="button" class="prices-btn">online-booking</button>
 
         </section>
-        <section>
-           <ul>
-            <li>
-                <span>600</span> <sup style="color: red;">+</sup>
-                <p>Satisfied customers per day</p>
+        <section class="benefits">
+           <ul class="benefits-list">
+            <li class="benefits-item">
+                <span class="benefits-count">600</span> <sup class="benefits-plus" style="color: red;">+</sup>
+                <p class="benefits-item-text">Satisfied customers per day</p>
             </li>
             <li>
                 <span>50</span> <sup style="color: red;">+</sup>
@@ -108,24 +112,24 @@
            <h2>¿Why people come to us?</h2>
            <p>Only good things are said about us. But it's better to see and feel 1 time than read 10 times. </p>
         </section>
-        <section>
-            <span>For true enjoyers of the atmosphere</span>
-            <h2>Our barbers</h2>
-            <ul>
-                <li>
+        <section class="barbers" id="barbers">
+            <span class="barbers-uptitle uptitle">For true enjoyers of the atmosphere</span>
+            <h2 class="barbers-title title">Our barbers</h2>
+            <ul class="barbers-list">
+                <li class="barbers-item">
                     <img src="./images/john-smith.jpg" width="370" height="346" alt="John Smith">
-                    <h3>John Smith</h3>
-                    <p>Extreme Barber</p>
-                    <ul>
-                        <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-                        <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-                        <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
-                        <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
+                    <h3 class="barbers-item-title">John Smith</h3>
+                    <p class="barbers-item-text">Extreme Barber</p>
+                    <ul class="barbers-soc-list">
+                        <li class="barbers-soc-item"><a class="barbers-soc-list" href="" aria-label="Ссылка на Instagram">Instagram</a></li>
+                        <li class="barbers-soc-item"><a class="barbers-soc-list" href="" aria-label="Ссылка на Twitter">Twitter</a></li>
+                        <li class="barbers-soc-item"><a class="barbers-soc-list" href="" aria-label="Ссылка на Facebook">Facebook</a></li>
+                        <li class="barbers-soc-item"><a class="barbers-soc-list" href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
                     </ul>
                 </li>
-                <li>
+                <li class="barbers-item">
                     <img src="./images/michele-doe.jpg " width="370" height="346" alt="Michele Doe">
-                    <h3>Michele Doe</h3>
+                    <h3 class="barbers-item-title">Michele Doe</h3>
                     <p>Extreme Barber</p>
                     <ul>
                         <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
@@ -134,7 +138,7 @@
                         <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
                     </ul>
                 </li>
-                <li>
+                <li class="barbers-item">
                     <img src="./images/alan-black.jpg" width="370" height="346" alt="Alan Black">
                     <h3>Alan Black</h3>
                     <p>Extreme Barber</p>
@@ -148,19 +152,18 @@
             </ul>
 
         </section>
-        <section>
-            <span></span>
-            <h2 hidden>Portfolio</h2>
-            <span>In Latin, "barba" means "beard"</span>
-            <ul>
-                <li><img src="./images/portfolio_1.jpg" width="270" height="360" alt="Portfolio"></li>
+        <section class="gallery">
+            <h2 class="hide" hidden>Portfolio</h2>
+            <span class="gallery-uptitle title">In Latin, "barba" means "beard"</span>
+            <ul class="gallery-list">
+                <li class="gallery-item"><img src="./images/portfolio_1.jpg" width="270" height="360" alt="Portfolio"></li>
                 <li><img src="./images/portfolio_2.jpg" width="270" height="360" alt="Portfolio"></li>
                 <li><img src="./images/portfolio_3.jpg" width="270" height="360" alt="Portfolio"></li>
                 <li><img src="./images/portfolio_4.jpg" width="270" height="360" alt="Portfolio"></li>
             </ul>
         </section>
-        <section>
-            <h2>Contacts</h2>
+        <section class="contacts">
+            <h2 class="contacts-title ">Contacts</h2>
             <address>
                 <ul>
                     <li><a href="https://goo.gl/maps/kJ9vZ2LGP6WYrwJo7" target="_blank" rel="noopener noreferrer">st. Vasilkovaya, 7A <br>
@@ -169,8 +172,8 @@
                     <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
                 </ul>
             </address>
-            <span>Working hours</span>
-            <p>Every day from 9:00 to 22:00</p>
+            <span class="contacts-shedule-title">Working hours</span>
+            <p class="contacts-shedule-text">Every day from 9:00 to 22:00</p>
             
         </section>
     </main>
